--- a/P2/API/API/API.csproj
+++ b/P2/API/API/API.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -62,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Bank.cs" />
     <Compile Include="Currency.cs" />
+    <Compile Include="CurrencyDraw.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +78,14 @@
     <Compile Include="Migrations\202204051212365_nasza_pierwsza_migracja.designer.cs">
       <DependentUpon>202204051212365_nasza_pierwsza_migracja.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202204071934418_Druga_migracja.cs" />
+    <Compile Include="Migrations\202204071934418_Druga_migracja.designer.cs">
+      <DependentUpon>202204071934418_Druga_migracja.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202204072038307_trzecia_migracja.cs" />
+    <Compile Include="Migrations\202204072038307_trzecia_migracja.designer.cs">
+      <DependentUpon>202204072038307_trzecia_migracja.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -88,6 +98,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202204051212365_nasza_pierwsza_migracja.resx">
       <DependentUpon>202204051212365_nasza_pierwsza_migracja.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204071934418_Druga_migracja.resx">
+      <DependentUpon>202204071934418_Druga_migracja.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202204072038307_trzecia_migracja.resx">
+      <DependentUpon>202204072038307_trzecia_migracja.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
